# main

./: .gitignore  .gitmodules  gradle.properties  gradlew  settings.gradle
.github/workflows/: build.yml  gradle.yml
app/: build.gradle
oniguruma-native/: build.gradle.kts
oniguruma-native/src/main/cpp/: CMakeLists.txt
